workspace/log/build_2024-12-08_14-03-50/template_drone_control/stdout_stderr.log
[35m[1mScanning dependencies of target swaarm_control[0m
[ 50%] Built target template_drone_control_node
[ 75%] [32mBuilding CXX object CMakeFiles/swaarm_control.dir/src/swaarm_control.cpp.o[0m
/home/lrs-ubuntu/Documents/GitHub/LRS-zadania/workspace/src/template_drone_control/src/swaarm_control.cpp:256:10: error: expected ‘;’ at end of member declaration
  256 |     bool all_active_local move_drones(Coords coordsLeadingDrone)
      |          ^~~~~~~~~~~~~~~~
      |                          ;
/home/lrs-ubuntu/Documents/GitHub/LRS-zadania/workspace/src/template_drone_control/src/swaarm_control.cpp:256:64: error: ISO C++ forbids declaration of ‘move_drones’ with no type [-fpermissive]
  256 |     bool all_active_local move_drones(Coords coordsLeadingDrone)
      |                                                                ^
/home/lrs-ubuntu/Documents/GitHub/LRS-zadania/workspace/src/template_drone_control/src/swaarm_control.cpp: In member function ‘int MultiDroneControl::move_drones(MultiDroneControl::Coords)’:
/home/lrs-ubuntu/Documents/GitHub/LRS-zadania/workspace/src/template_drone_control/src/swaarm_control.cpp:324:5: warning: control reaches end of non-void function [-Wreturn-type]
  324 |     }
      |     ^
make[2]: *** [CMakeFiles/swaarm_control.dir/build.make:63: CMakeFiles/swaarm_control.dir/src/swaarm_control.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:80: CMakeFiles/swaarm_control.dir/all] Error 2
make: *** [Makefile:141: all] Error 2
